--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 /*
   Josh's Custom CSS Reset
   https://www.joshwcomeau.com/css/custom-css-reset/
@@ -49,6 +51,7 @@
 /* ACTUAL CSS STARTS FROM HERE : */
 
 body {
+  font-family: "Inter", sans-serif;
   display: grid;
   grid-template-columns: 1fr 4fr;
   padding: 10px;
