--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 
 :root {
   --color-sidebar: #0099ff;
+  --color-grey: rgba(31, 100, 134, 0.136);
 }
 
 /*
@@ -77,7 +78,9 @@ main {
 }
 
 .main-content {
+  flex: auto;
   display: flex;
+  background-color: var(--color-grey);
 }
 
 .main-content > * {
@@ -151,10 +154,6 @@ li {
   filter: invert(100%) sepia(0%) saturate(4028%) hue-rotate(206deg) brightness(129%) contrast(109%);  
 }
 
-main {
-  padding: 10px;
-}
-
 .profile-circle {
   height: 40px;
   min-width: 40px;
@@ -176,7 +175,7 @@ main {
 .top-row > input {
   outline: none;
   border-radius: 20px;
-  background-color: gainsboro;
+  background-color: var(--color-grey);
   border: 0px;
   width: 600px;
   padding-left: 10px;
@@ -204,4 +203,8 @@ main {
   font-size: 14px;
   font-weight: 500;
   text-align: center;
+}
+
+.main-content {
+  box-shadow: inset rgb(128, 128, 128, 0.5) 0px 1px 3px;
 }
