--- a/styles.css
+++ b/styles.css
@@ -208,3 +208,16 @@ li {
 .main-content {
   box-shadow: inset rgb(128, 128, 128, 0.5) 0px 1px 3px;
 }
+
+
+/* Below is the styling for main content */
+
+.project-cards,
+.announcement-card,
+.trending-card {
+  background-color: white;
+  box-shadow: rgb(128, 128, 128, 0.5) 7px 7px 10px;
+  border-radius: 10px;
+  padding: 30px 10px;
+
+}
