--- a/styles.css
+++ b/styles.css
@@ -219,5 +219,15 @@ li {
   box-shadow: rgb(128, 128, 128, 0.5) 7px 7px 10px;
   border-radius: 10px;
   padding: 30px 10px;
+  border-left-color: goldenrod;
+  border-left-width: 10px;
+  border-left-style: solid;
+}
 
+.main-content {
+  padding: 20px 20px 0px;  
+}
+
+.projects > h3 {
+  align-self: flex-start;
 }
