--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,8 @@ main {
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
 }
 
 .projects > h3 {
@@ -218,10 +219,7 @@ li {
   background-color: white;
   box-shadow: rgb(128, 128, 128, 0.5) 7px 7px 10px;
   border-radius: 10px;
-  padding: 30px 10px;
-  border-left-color: goldenrod;
-  border-left-width: 10px;
-  border-left-style: solid;
+  padding: 20px 10px;
 }
 
 .main-content {
@@ -230,4 +228,25 @@ li {
 
 .projects > h3 {
   align-self: flex-start;
+}
+
+.main-content h5 {
+  font-size: 17px;
+}
+
+.project-cards {
+  border-left-color: goldenrod;
+  border-left-width: 10px;
+  border-left-style: solid;
+  min-width: 200px;
+}
+
+.project-cards > p {
+  opacity: 0.6;
+  line-height: 17px;
+  font-size: 14px;
+}
+
+.card-footer {
+  margin-top: 30px;
 }
