--- a/styles.css
+++ b/styles.css
@@ -219,7 +219,7 @@ li {
   background-color: white;
   box-shadow: rgb(128, 128, 128, 0.5) 7px 7px 10px;
   border-radius: 10px;
-  padding: 20px 10px;
+  padding: 20px 10px 0px;
 }
 
 .main-content {
