--- a/styles.css
+++ b/styles.css
@@ -223,7 +223,7 @@ li {
   background-color: white;
   box-shadow: rgb(128, 128, 128, 0.5) 7px 7px 10px;
   border-radius: 10px;
-  padding: 20px 10px 0px;
+  padding: 20px 20px;
 }
 
 .main-content {
@@ -290,4 +290,44 @@ li {
 
 .extras h3 {
   margin-bottom: 10px;
+}
+
+.trending-list > li {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.trending-list > li {
+  margin: 20px 0px;
+}
+
+.trending-list>li:last-child {
+  margin-bottom: 0px;
+}
+
+.trending-list>li:first-child {
+  margin-top: 0px;
+}
+
+.trending-list p {
+  opacity: 0.6;
+  font-size: 13px;
+}
+
+.trending-list .tag {
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.blue {
+  background-color: skyblue;
+}
+
+.grey {
+  background-color: grey;
+}
+
+.pink {
+  background-color: pink;
 }
